mobile nav layout issue fixed

--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -49,7 +49,6 @@
     height: 100vh;
     width: 100%;
     background: whitesmoke;
-    align-items: center;
     justify-items: center;
     clip-path: circle(100px at 90% -20%);
     -webkit-clip-path: circle(100px at 90% -20%);
@@ -60,6 +59,7 @@
     }
     li {
       align-self: end;
+
       opacity: 0;
       a {
         color: black;
